policies/tests/require-resource-limits/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-resource-limits-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: require-resource-limits
    rule: validate-resource-limits
    resource: good-pod
    kind: Pod
    result: pass
  - policy: require-resource-limits
    rule: validate-resource-limits
    resource: bad-pod
    kind: Pod
    result: fail
